Modified PPHQ installer. - Instead of substituting values randomely, we will use hyperic hq installer (it will be build during installer creation) from the source. - Improved Validations - Java Detection from the installer (using --jrehome argument or JAVA_HOME environment variable or autodetectJava facility from the bitrock.) - Windows Service Creation..